# forest-id

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml
app/: index.py
data/: dataset_splits.json
forestid/: datasethandler.py  evaluator.py  imagehandler.py  imageviewer.py  modelhandler.py
model/: class_mapping.json
notebooks/: audio_interview.ipynb  vision_interview.ipynb
